--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
